Fri, 09 Nov 2007 10:05:36 +0100 <thp@perli.net>
Fix format_filesize() usage in episodes selector and podcastItem

	* src/gpodder/gui.py: Use the correct (config-using) format_filesize()
	function to generate the total size string in the episode selector
	* src/gpodder/libpodcasts.py: Use the correct (config-usig
	format_filesize() function to generate the total size string in
	podcastItem; thanks to Pieter De Decker <pdedecker@gmail.com> for
	pointing that out
	* data/gpodder.glade: Use "Preferences" instead of "Preferences..."
	which feels a bit better in the GUI

Thu, 08 Nov 2007 21:25:19 +0100 <thp@perli.net>
Add "gPodder download folder synchronizer" scripts to repository

	* doc/dev/gdfs/gdfs-check.py: Added
	* doc/dev/gdfs/gdfs-init.py: Added
	* doc/dev/gdfs/README: Added

Thu, 08 Nov 2007 20:01:13 +0100 <thp@perli.net>
The mighty episode selector dialog and some menu re-arrangements

	* src/gpodder/gui.py: Move the "center_on_widget" keyword-based window
	positioning code to GladeWidget to be universally usable; update
	"Device" menu item on startup; new functions: delete_episode_list()
	and download_episode_list() that both operate on lists of episodes;
	add code for invoking gPodderEpisodeSelector for deleting old
	episodes; re-work on_itemDownloadAllNew_activate to use the episode
	selector instead of hand-crafting a message dialog text; add
	update_item_device() function that will handle the hiding, showing and
	renaming of the "Device" menu in the menubar; clean-up
	gPodderProperties with callback_finished setting (now kwarg-based);
	new, might, fancy, customizable and uber-sexy gPodderEpisodeSelector
	that will prove to be useful in some places in our codebase: it
	basically allows the user to select a subset of episodes from a given
	list in a quite sophisticated way; new "delete old episodes" menu item
	added for cleaning up gPodder's downloads
	* src/gpodder/libpodcasts.py: Add delete_from_disk() convenience